# llm-mcp-python-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
output/: chelsey_story.md  news.md
output/knowledge/: Chelsey_Dietrich.md  Clementina_DuBuque.md  Clementine_Bauch.md  Ervin_Howell.md  Glenna_Reichert.md  Kurtis_Weissnat.md  Leanne_Graham.md  Mrs_Dennis_Schulist.md  Nicholas_Runolfsdottir_V.md  Patricia_Lebsack.md  summary.md
src/: Agent.py  ChatOpenAI.py  EmbeddingRetrieve.py  MCPClient.py  VectorStore.py  main.py  utils.py
